--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"http://shoumik20.github.io/shoumik44",
   "name": "portfoliowebsite",
   "version": "0.1.0",
   "homepage": "https://poojagarva28.github.io/myportfolio/",
@@ -21,6 +22,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
